# h3x4p0d

./: .coverage  .gitignore  00_START_HERE.txt  CONFIGURATION_GUIDE.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  UI_VISUAL_GUIDE.txt  WEB_UI_GUIDE.md  changes.md  pyproject.toml  pytest.ini  run_tests.sh  start.sh  test.txt  test_controller.py
.claude/: settings.local.json
src/hexapod/: calibrate.py  calibrate_web.py  cli_api.py  config.py  config_core.py  config_defaults.py  config_profiles.py  controller_bluetooth.py  gait.py  hardware.py  main.py  test_runner.py  web.py  web_bluetooth.py  web_calibration.py  web_config.py  web_controller.py  web_gait.py  web_models.py  web_patrol.py  web_poses.py  web_profiles.py  web_runtime.py  web_status.py
tests/: README.md  __init__.py  conftest.py  test_calibrate.py  test_calibrate_web.py  test_config.py  test_config_properties.py  test_config_refresh.py  test_controller.py  test_gait.py  test_hardware.py  test_ik_consistency.py  test_main.py  test_web.py
web_static/: app.js  app.js.bak2  app_backup.js  app_updates.js  calibrate.html  config.css  config.html  config.js  config2.html  config2.js  hexapod-3d.js  index.html  index_backup.html  patrol.html  patrol.js
